[gd_scene load_steps=7 format=3 uid="uid://cwg2mdp03w5t7"]

[ext_resource type="Texture2D" uid="uid://cnsfy1shqmp75" path="res://player/nave-g.png" id="1_66xcp"]
[ext_resource type="Script" path="res://player/player.gd" id="1_uy2vi"]
[ext_resource type="AudioStream" uid="uid://dh8s3aupxv3sq" path="res://assets/audio/gift.wav" id="3_nca0p"]
[ext_resource type="Texture2D" uid="uid://e5t6wbbnq033" path="res://player/nave-xl.png" id="3_u55w6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nvp5a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_66xcp")
}, {
"duration": 1.0,
"texture": ExtResource("3_u55w6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o5oxo"]
size = Vector2(64, 20)

[node name="player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 25
motion_mode = 1
script = ExtResource("1_uy2vi")
metadata/_edit_group_ = true

[node name="spr_player" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nvp5a")

[node name="col_player" type="CollisionShape2D" parent="."]
texture_filter = 1
shape = SubResource("RectangleShape2D_o5oxo")

[node name="Node2D" type="Node2D" parent="."]
visible = false

[node name="gift" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_nca0p")

[node name="powerup_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="powerup_timer" to="." method="_on_player_powerup_timer_timeout"]
